blog/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-web-svc
  labels:
    app: blog-web
spec:
  ports:
  - port: 80
    targetPort: 80
    name: tcp
  selector:
    app: blog-web
  type: NodePort
