blog/web/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: blog-web-route
  labels:
    app: blog
spec:
  parentRefs:
    - name: my-gateway
  hostnames:
    - blog.costalong.cn
  rules:
    - matches:
        - path:
            type: Exact
            value: /
    - backendRefs:                          # [14]
        - name: blog-web-svc                  # [15]
          weight: 1                         # [16]
          port: 80
